--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -399,9 +399,6 @@
   <data name="MenuPhyCameraManager" xml:space="preserve">
     <value>물리적 카메라 관리(_P)</value>
   </data>
-  <data name="MenuPG" xml:space="preserve">
-    <value>PG 템플릿 설정</value>
-  </data>
   <data name="MenuOptions" xml:space="preserve">
     <value>옵션 (_O)</value>
   </data>
@@ -1467,8 +1464,11 @@
   <data name="CaliberationParamSet" xml:space="preserve">
     <value>교정 매개변수 설정</value>
   </data>
-  <data name="MaxNumber" xml:space="preserve">
-    <value>최대 수량</value>
+  <data name="EditCalibration" xml:space="preserve">
+    <value>수정 파일 편집</value>
+  </data>
+  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
+    <value>보정을 사용하기 전에 해당 물리적 카메라를 구성하세요.</value>
   </data>
   <data name="CalibrationViewSettings" xml:space="preserve">
     <value>올바른 뷰 구성</value>
@@ -1476,25 +1476,211 @@
   <data name="ShowList" xml:space="preserve">
     <value>목록 보기</value>
   </data>
+  <data name="TemperatureDataNotFound" xml:space="preserve">
+    <value>온도 데이터를 얻지 못했습니다</value>
+  </data>
   <data name="ListHeight" xml:space="preserve">
     <value>목록 높이</value>
   </data>
-  <data name="EditCalibration" xml:space="preserve">
-    <value>수정 파일 편집</value>
-  </data>
-  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
-    <value>보정을 사용하기 전에 해당 물리적 카메라를 구성하세요.</value>
-  </data>
-  <data name="FileSavePath" xml:space="preserve">
-    <value>파일 저장 경로</value>
-  </data>
-  <data name="TemperatureDataNotFound" xml:space="preserve">
-    <value>온도 데이터를 얻지 못했습니다</value>
+  <data name="MaxNumber" xml:space="preserve">
+    <value>최대 수량</value>
   </data>
   <data name="SaveCurrentExposureConfigPrompt" xml:space="preserve">
     <value>현재 노출 구성을 저장하시겠습니까?</value>
   </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>파일 저장 경로</value>
+  </data>
   <data name="ErrorQueryingTemperatureData" xml:space="preserve">
     <value>온도 데이터를 쿼리하는 동안 오류가 발생했습니다.</value>
+  </data>
+  <data name="SzComName" xml:space="preserve">
+    <value>일련번호</value>
+  </data>
+  <data name="RetryCount" xml:space="preserve">
+    <value>재시도 횟수</value>
+  </data>
+  <data name="FilterWheelCount" xml:space="preserve">
+    <value>컬러 필터의 개수(6, 12)</value>
+  </data>
+  <data name="AutoConnect" xml:space="preserve">
+    <value>자동 연결</value>
+  </data>
+  <data name="PgTemplateConfig" xml:space="preserve">
+    <value>PG 템플릿 구성</value>
+  </data>
+  <data name="SensorDicEdit" xml:space="preserve">
+    <value>센서 사전 편집</value>
+  </data>
+  <data name="SMUView" xml:space="preserve">
+    <value>소스 테이블 뷰</value>
+  </data>
+  <data name="UploadLic" xml:space="preserve">
+    <value>라이센스 업로드</value>
+  </data>
+  <data name="ApaptivezeroCaliSet" xml:space="preserve">
+    <value>적응형 제로 설정</value>
+  </data>
+  <data name="SpectrumView" xml:space="preserve">
+    <value>분광기 보기</value>
+  </data>
+  <data name="ExcAdaptiveZeroCali" xml:space="preserve">
+    <value>적응형 제로화 실행</value>
+  </data>
+  <data name="UploadThridPartPlusIn" xml:space="preserve">
+    <value>타사 플러그인 업로드</value>
+  </data>
+  <data name="ThirdPartAlgorithmConfig" xml:space="preserve">
+    <value>타사 알고리즘 구성</value>
+  </data>
+  <data name="ThirdPartAlgView" xml:space="preserve">
+    <value>타사 알고리즘 보기</value>
+  </data>
+  <data name="CaliTemplateManagerment" xml:space="preserve">
+    <value>수정 템플릿 관리</value>
+  </data>
+  <data name="CaliTemplateSet" xml:space="preserve">
+    <value>수정 템플릿 설정</value>
+  </data>
+  <data name="DownLicOnline" xml:space="preserve">
+    <value>온라인으로 라이센스 다운로드</value>
+  </data>
+  <data name="CreateRestorePoint" xml:space="preserve">
+    <value>복원 지점 만들기</value>
+  </data>
+  <data name="LoadRestorePoint" xml:space="preserve">
+    <value>복원 지점 로드</value>
+  </data>
+  <data name="StartRC" xml:space="preserve">
+    <value>RC 활성화</value>
+  </data>
+  <data name="DefaultCanvas" xml:space="preserve">
+    <value>기본 캔버스</value>
+  </data>
+  <data name="ImgImport" xml:space="preserve">
+    <value>이미지 가져오기</value>
+  </data>
+  <data name="ImportLatestImages" xml:space="preserve">
+    <value>최신 이미지를 가져옵니다</value>
+  </data>
+  <data name="SavePOI" xml:space="preserve">
+    <value>주의를 기울이다</value>
+  </data>
+  <data name="ClearPOI" xml:space="preserve">
+    <value>명확한 초점</value>
+  </data>
+  <data name="ReRender" xml:space="preserve">
+    <value>다시 렌더링</value>
+  </data>
+  <data name="Once" xml:space="preserve">
+    <value>한 번</value>
+  </data>
+  <data name="SaveToFile" xml:space="preserve">
+    <value>파일에 저장</value>
+  </data>
+  <data name="Radius" xml:space="preserve">
+    <value>반지름</value>
+  </data>
+  <data name="DataCorrectionFilePath" xml:space="preserve">
+    <value>데이터 수정 파일 경로</value>
+  </data>
+  <data name="TopRight" xml:space="preserve">
+    <value>오른쪽 상단</value>
+  </data>
+  <data name="TopLeft" xml:space="preserve">
+    <value>왼쪽 상단</value>
+  </data>
+  <data name="DownLeft" xml:space="preserve">
+    <value>왼쪽 하단</value>
+  </data>
+  <data name="DownRight" xml:space="preserve">
+    <value>오른쪽 하단</value>
+  </data>
+  <data name="SetToGlobalCache" xml:space="preserve">
+    <value>글로벌 캐시로 설정</value>
+  </data>
+  <data name="ApplyCache" xml:space="preserve">
+    <value>애플리케이션 캐싱</value>
+  </data>
+  <data name="EnableActiveAreaFourCorners" xml:space="preserve">
+    <value>빛나는 영역의 네 모서리 점을 활성화합니다.</value>
+  </data>
+  <data name="PointLayoutAreaDisplay" xml:space="preserve">
+    <value>유통지역 표시</value>
+  </data>
+  <data name="CentralPoint" xml:space="preserve">
+    <value>중심점</value>
+  </data>
+  <data name="SetPointLayoutArea" xml:space="preserve">
+    <value>유통 구역 설정</value>
+  </data>
+  <data name="Count" xml:space="preserve">
+    <value>수량</value>
+  </data>
+  <data name="Angle" xml:space="preserve">
+    <value>각도</value>
+  </data>
+  <data name="FindActiveArea" xml:space="preserve">
+    <value>빛나는 영역을 찾으세요</value>
+  </data>
+  <data name="FillArea" xml:space="preserve">
+    <value>가득한</value>
+  </data>
+  <data name="Width" xml:space="preserve">
+    <value>너비</value>
+  </data>
+  <data name="height" xml:space="preserve">
+    <value>높은</value>
+  </data>
+  <data name="RowCount" xml:space="preserve">
+    <value>줄의 수</value>
+  </data>
+  <data name="ColumCount" xml:space="preserve">
+    <value>열의 수</value>
+  </data>
+  <data name="FindLuminousAreaCorners" xml:space="preserve">
+    <value>빛나는 영역의 모서리를 찾으세요</value>
+  </data>
+  <data name="Left" xml:space="preserve">
+    <value>왼쪽</value>
+  </data>
+  <data name="Right" xml:space="preserve">
+    <value>오른쪽:</value>
+  </data>
+  <data name="Dispaly" xml:space="preserve">
+    <value>보여주다</value>
+  </data>
+  <data name="SetSegmentation" xml:space="preserve">
+    <value>세분화 설정</value>
+  </data>
+  <data name="UseNodePrompt" xml:space="preserve">
+    <value>노드 사용</value>
+  </data>
+  <data name="Quadrilateral" xml:space="preserve">
+    <value>사변형</value>
+  </data>
+  <data name="Polyline" xml:space="preserve">
+    <value>끊어진 선</value>
+  </data>
+  <data name="Value" xml:space="preserve">
+    <value>값</value>
+  </data>
+  <data name="Circle" xml:space="preserve">
+    <value>둥근</value>
+  </data>
+  <data name="POIEdit" xml:space="preserve">
+    <value>포커스 편집기</value>
+  </data>
+  <data name="Rect" xml:space="preserve">
+    <value>구형</value>
+  </data>
+  <data name="Draw" xml:space="preserve">
+    <value>그리다</value>
+  </data>
+  <data name="POISetting" xml:space="preserve">
+    <value>초점 설정</value>
+  </data>
+  <data name="PGParamConfig" xml:space="preserve">
+    <value>PGParam 설정</value>
   </data>
 </root>
