--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1498,4 +1498,10 @@
   <data name="ErrorQueryingTemperatureData" xml:space="preserve">
     <value>Une erreur s'est produite lors de la requête des données de température.</value>
   </data>
+  <data name="Absolute" xml:space="preserve">
+    <value>Absolu</value>
+  </data>
+  <data name="Relative" xml:space="preserve">
+    <value>Relativement</value>
+  </data>
 </root>
