--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1699,4 +1699,52 @@
   <data name="Relative" xml:space="preserve">
     <value>Relativement</value>
   </data>
+  <data name="singleChannel" xml:space="preserve">
+    <value>canal unique</value>
+  </data>
+  <data name="threeChannels" xml:space="preserve">
+    <value>Trois canaux</value>
+  </data>
+  <data name="Wavelength" xml:space="preserve">
+    <value>longueur d'onde</value>
+  </data>
+  <data name="RelativeSpectrum" xml:space="preserve">
+    <value>spectre relatif</value>
+  </data>
+  <data name="AbsoluteSpectrum" xml:space="preserve">
+    <value>Spectre absolu</value>
+  </data>
+  <data name="I" xml:space="preserve">
+    <value>Actuel</value>
+  </data>
+  <data name="V" xml:space="preserve">
+    <value>Tension</value>
+  </data>
+  <data name="HalfBandwidth" xml:space="preserve">
+    <value>largeur de demi-onde</value>
+  </data>
+  <data name="SourceValue" xml:space="preserve">
+    <value>Valeur source</value>
+  </data>
+  <data name="LimitValue" xml:space="preserve">
+    <value>Limite</value>
+  </data>
+  <data name="Ignite" xml:space="preserve">
+    <value>Allumer</value>
+  </data>
+  <data name="Extinguish" xml:space="preserve">
+    <value>Éteindre</value>
+  </data>
+  <data name="Start" xml:space="preserve">
+    <value>Commencer</value>
+  </data>
+  <data name="End" xml:space="preserve">
+    <value>Finition</value>
+  </data>
+  <data name="PointCount" xml:space="preserve">
+    <value>Points</value>
+  </data>
+  <data name="Network" xml:space="preserve">
+    <value>réseau</value>
+  </data>
 </root>
