--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1698,4 +1698,52 @@
   <data name="Relative" xml:space="preserve">
     <value>относительно</value>
   </data>
+  <data name="singleChannel" xml:space="preserve">
+    <value>один канал</value>
+  </data>
+  <data name="threeChannels" xml:space="preserve">
+    <value>Трехканальный</value>
+  </data>
+  <data name="Wavelength" xml:space="preserve">
+    <value>длина волны</value>
+  </data>
+  <data name="RelativeSpectrum" xml:space="preserve">
+    <value>относительный спектр</value>
+  </data>
+  <data name="AbsoluteSpectrum" xml:space="preserve">
+    <value>Абсолютный Спектр</value>
+  </data>
+  <data name="I" xml:space="preserve">
+    <value>Текущий</value>
+  </data>
+  <data name="V" xml:space="preserve">
+    <value>Напряжение</value>
+  </data>
+  <data name="HalfBandwidth" xml:space="preserve">
+    <value>Ширина полуволны</value>
+  </data>
+  <data name="SourceValue" xml:space="preserve">
+    <value>Исходное значение</value>
+  </data>
+  <data name="LimitValue" xml:space="preserve">
+    <value>Предел</value>
+  </data>
+  <data name="Ignite" xml:space="preserve">
+    <value>Зажигай</value>
+  </data>
+  <data name="Extinguish" xml:space="preserve">
+    <value>Тушить</value>
+  </data>
+  <data name="Start" xml:space="preserve">
+    <value>Начинать</value>
+  </data>
+  <data name="End" xml:space="preserve">
+    <value>Заканчивать</value>
+  </data>
+  <data name="PointCount" xml:space="preserve">
+    <value>Очки</value>
+  </data>
+  <data name="Network" xml:space="preserve">
+    <value>сеть</value>
+  </data>
 </root>
