--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1767,4 +1767,13 @@
   <data name="VoltageCurve" xml:space="preserve">
     <value>電圧曲線</value>
   </data>
+  <data name="RelativeSpectrumCurve" xml:space="preserve">
+    <value>相対スペクトル曲線</value>
+  </data>
+  <data name="AbsoluteSpectrumCurve" xml:space="preserve">
+    <value>絶対スペクトル曲線</value>
+  </data>
+  <data name="WavelengthNm" xml:space="preserve">
+    <value>波長 [nm]</value>
+  </data>
 </root>
